Label alignment issue fix

--- a/src/components/MultipleCheckboxFacets/MultipleCheckboxFacets.scss
+++ b/src/components/MultipleCheckboxFacets/MultipleCheckboxFacets.scss
@@ -87,6 +87,7 @@
 .card{
     height: 4.8rem;
     cursor: pointer;
+    border: .1rem solid #BDBDBD !important;
 }
 .textFieldHeight{
     min-height: 36px !important;
